syntax = "proto3";
package api.billingd.pb;

message AggregateStoredDataUsage {
    int64 units = 1;
    int64 total_size = 2;
    int64 free_size = 3;
}

message AggregateSumUsage {
    int64 units = 1;
    int64 sub_units = 2;
    int64 free_units = 3;
}

message UsagePeriod {
    int64 start = 1;
    int64 end = 2;
}

message CheckHealthRequest {}

message CheckHealthResponse {}

message CreateCustomerRequest {
    string email = 1;
}

message CreateCustomerResponse {
    string customer_id = 1;
}

message GetCustomerRequest {
    string customer_id = 1;
}

message GetCustomerResponse {
    string email = 1;
    string status = 2;
    int64 balance = 3;
    bool billable = 4;
    bool delinquent = 5;
    int64 created_at = 6;

    UsagePeriod period = 7;
    AggregateStoredDataUsage stored_data = 8;
    AggregateSumUsage network_egress = 9;
    AggregateSumUsage instance_writes = 10;
    AggregateSumUsage instance_reads = 11;
}

message GetCustomerSessionRequest {
    string customer_id = 1;
}

message GetCustomerSessionResponse {
    string url = 1;
}

message UpdateCustomerRequest {
    string customer_id = 1;
    int64 balance = 2;
    bool billable = 3;
    bool delinquent = 4;
}

message UpdateCustomerResponse {}

message UpdateCustomerSubscriptionRequest {
    string customer_id = 1;
    string status = 2;
    UsagePeriod period = 3;
}

message UpdateCustomerSubscriptionResponse {}

message RecreateCustomerSubscriptionRequest {
    string customer_id = 1;
}

message RecreateCustomerSubscriptionResponse {}

message DeleteCustomerRequest {
    string customer_id = 1;
}

message DeleteCustomerResponse {}

message IncStoredDataRequest {
    string customer_id = 1;
    int64 inc_size = 2;
}

message IncStoredDataResponse {
    UsagePeriod period = 1;
    AggregateStoredDataUsage stored_data = 2;
}

message IncNetworkEgressRequest {
    string customer_id = 1;
    int64 inc_size = 2;
}

message IncNetworkEgressResponse {
    UsagePeriod period = 1;
    AggregateSumUsage network_egress = 2;
}

message IncInstanceReadsRequest {
    string customer_id = 1;
    int64 inc_count = 2;
}

message IncInstanceReadsResponse {
    UsagePeriod period = 1;
    AggregateSumUsage instance_reads = 2;
}

message IncInstanceWritesRequest {
    string customer_id = 1;
    int64 inc_count = 2;
}

message IncInstanceWritesResponse {
    UsagePeriod period = 1;
    AggregateSumUsage instance_writes = 2;
}

service APIService {
    rpc CheckHealth(CheckHealthRequest) returns (CheckHealthResponse) {}
    rpc CreateCustomer(CreateCustomerRequest) returns (CreateCustomerResponse) {}
    rpc GetCustomer(GetCustomerRequest) returns (GetCustomerResponse) {}
    rpc GetCustomerSession(GetCustomerSessionRequest) returns (GetCustomerSessionResponse) {}
    rpc UpdateCustomer(UpdateCustomerRequest) returns (UpdateCustomerResponse) {}
    rpc UpdateCustomerSubscription(UpdateCustomerSubscriptionRequest) returns (UpdateCustomerSubscriptionResponse) {}
    rpc RecreateCustomerSubscription(RecreateCustomerSubscriptionRequest) returns (RecreateCustomerSubscriptionResponse) {}
    rpc DeleteCustomer(DeleteCustomerRequest) returns (DeleteCustomerResponse) {}
    rpc IncStoredData(IncStoredDataRequest) returns (IncStoredDataResponse) {}
    rpc IncNetworkEgress(IncNetworkEgressRequest) returns (IncNetworkEgressResponse) {}
    rpc IncInstanceReads(IncInstanceReadsRequest) returns (IncInstanceReadsResponse) {}
    rpc IncInstanceWrites(IncInstanceWritesRequest) returns (IncInstanceWritesResponse) {}
}
